# dwrs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
i18n/: en.flt  en.yml  ru.yml
i18n/ru/: core.ftl
src/: .main.rs.kate-swp  main.rs  test.txt
