[package]
name = "dwrs"
version = "0.1.2"
authors = ["vadim rofeds12345@gmail.com"]
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"]}
colored = "3.0.0"
env_logger = "0.11.8"
futures = "0.3.31"
indicatif = "0.18.0"
locale_config = "0.3.0"
log = "0.4.27"
once_cell = "1.21.3"
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls","blocking","json","stream"]}
rust-i18n = "3.1.5"
tokio = { version = "1.46.1", features = ["full"]}

url = "2.5.4"


[package.metadata.deb]
maintainer = "vadim rofeds12345@gmail.com"
depends = "libc6 (>= 2.28)"
section = "utils"
priority = "optional"
assets = [
    ["target/release/dwrs", "/usr/bin/","755"]
]
